--- a/source/scss/abstracts/variables.scss
+++ b/source/scss/abstracts/variables.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:200,400,600,900');
+@import url('https://fonts.googleapis.com/css?family=Suez+One');
 
 $primary-color: rgb(81, 31, 48);
 $secondary-color: rgb(195, 30, 37);
