--- a/templates/about.html
+++ b/templates/about.html
@@ -3,40 +3,46 @@
 {% block content %}
 <div class="l-about">
   <div class="content">
-    <h1> Our Story</h1>
-    <p> 
-      Our CEO has tread through the business of architecture & development. She
-      always had a passion for making her developments adhere to the latest
-      trends in green environmentally friendly building, but she quickly realized that
-      her partners did not understand the ins and outs of cutting edge
-      environmentally friendly building practices. She put down her drafting pencil and has
-      since decided to assist other developers in making sure that they build
-      the most forward thinking and efficient buildings possible with the latest
-      materials and technology on the market. 
-    </p>
+    <div class="story">
+      <h1> Our Story</h1>
+      <p> 
+        Our CEO has years of work in the business of architecture & development. She
+        always had a passion for making her developments adhere to the latest
+        trends in green environmentally friendly building, but she quickly realized that
+        her partners did not understand the ins and outs of cutting edge
+        environmentally friendly building practices. She put down her drafting pencil and has
+        since decided to assist other developers in making sure that they build
+        the most forward thinking and efficient buildings possible with the latest
+        materials and technology on the market. 
+      </p>
+    </div>
 
-    <h1> Meet The Staff </h1>
+    <div class="full-width">
+      <div class="meet-the-staff">
+        <h1> Meet The Staff </h1>
 
-    <div class="staff-images">
-      <div class="image-card">
-        <h3> Jill Waits </h3>
-          <div class="staff staff-1"> </div>
-        <p> CEO </p>
-      </div>
-      <div class="image-card">
-        <h3> Judy</h3>
-          <div class="staff staff-2"> </div>
-        <p> VP </p>
-      </div>
-      <div class="image-card">
-        <h3> James </h3>
-          <div class="staff staff-3"> </div>
-        <p> LEED Expert </p>
-      </div>
-      <div class="image-card">
-        <h3> Polly </h3>
-          <div class="staff staff-4"> </div>
-        <p> Company Parrot</p>
+        <div class="staff-images">
+          <div class="image-card">
+            <h3> Jill Waits </h3>
+              <div class="staff staff-1"> </div>
+            <p> CEO </p>
+          </div>
+          <div class="image-card">
+            <h3> Judy</h3>
+              <div class="staff staff-2"> </div>
+            <p> VP </p>
+          </div>
+          <div class="image-card">
+            <h3> James </h3>
+              <div class="staff staff-3"> </div>
+            <p> LEED Expert </p>
+          </div>
+          <div class="image-card">
+            <h3> Polly </h3>
+              <div class="staff staff-4"> </div>
+            <p> Company Parrot</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="question">
