--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
  
 </header>
 <div class="arrow">
-  <a id="start-container">
+  <a href="#start-container">
     <svg> 
      <use xlink:href="#arrow"></use>
   </svg>
@@ -30,7 +30,7 @@
 </div>
 
 <div class="l-container"> 
-  <a ></a>
+  <a id="start-container"></a>
 
   <div class="item item-right">
     <div class="text">
@@ -114,6 +114,4 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.js"></script>
-  <script src="js/smooth_scroll.js"></script>
 {% endblock %}
