--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 
+{% block title %}
+  <title> Faxian </title>
+{% endblock %}
+
 {% block content %}
 
 <!--<canvas style="width: 800px; height:600px;"id="three"> </canvas>-->
