--- a/templates/services.html
+++ b/templates/services.html
@@ -1,6 +1,10 @@
 
 {% extends "layout.html" %}
 
+{% block title %}
+  <title> Faxian | Services </title>
+{% endblock %}
+
 {% block header %}
 <link rel="stylesheet" type="text/css" href="lib/fullpage.js/dist/jquery.fullPage.css" />
 {% endblock %}
