--- a/source/scss/layouts/header.scss
+++ b/source/scss/layouts/header.scss
@@ -52,8 +52,10 @@ header {
     h1 {
       color: white;
       font-size: 2.5em;
+      margin-bottom: .5em;
     }
     ul {
+      margin: 0;
       padding: 0;
       list-style: none;
       color: white;
