--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-
+{% block title %}
+  <title> Faxian | About </title>
+{% endblock %}
 {% block content %}
 <div class="l-about">
   <div class="content">
