--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <link rel=StyleSheet href="css/style.css" TYPE="text/css" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Faxian </title>
+    {% block title %}
+    {% endblock %}
     <link rel="shortcut icon"
      href="/images/favicon.png" />
     {% block header %}
